Major html/css update
- Stopped at the middle to reorganize dev/ and add some dev features

--- a/src/global/global_structure.scss
+++ b/src/global/global_structure.scss
@@ -1,132 +1,195 @@
-/* Site main */
+// Notes --------------------
+
+// - Note that many `margin: 0` and `padding: 0` are used for robustness,
+// i.e. ensure that the third party css do not interfere with the layout.
+// - Note that the variables can be also defined in other scss documents,
+// update everywhere if changed.
+
+
+
+// Variables --------------------
+
+$media-width-lg: 920px;
+$media-width-md: 740px;
+
+
+
+// General structure --------------------
+
+// Base sizes:
+:root {
+  font-size: 16px;
+}
+body {
+    --main-width: min(65%, 1200px);
+    @media (max-width: $media-width-lg) {
+        --main-width: 80%;
+    }
+    @media (max-width: $media-width-md) {
+        --main-width: 95%; // NOTE: Also consider max(95%, 16rem)
+    }
+}
+
+// Push footer to bottom:
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-}
-#site-main {
-    flex: 1;
-}
-
-
-/* Site navbar */
-#site-header { /* should be the same as body > header*/
-    --blocks-padding: 2rem;
-    padding: 1rem 0 1rem 0;
-    border-bottom: 4px solid var(--orange);
-    margin: 0 0 4px 0;
-    min-width: calc(var(--min-width) - 2 * var(--blocks-padding));
-    line-height: 1;
-    display: flex;
-}
-#site-header .header-block {
-    margin: 0 var(--blocks-padding);
-    background-color: var(--orange);
-    height: 25px;
-    width: calc((100% - var(--main-width)) / 2 - 2 * var(--blocks-padding));
-}
-#site-header nav {
-    width: var(--main-width);
-}
-
-#site-header nav ul {
-    padding: 0;
+    min-width: 16rem;
     margin: 0;
-    line-height: 1;
-}
-#site-header .nav-li, .nav-drop {
-    font-size: 1.3rem;
-    display: inline-block;
-    margin-left: 1em;
-}
-#site-header .nav-li:first-child {
-    padding-left: 0;
-}
-
-#site-header .current-page {
-    font-weight: bold;
-}
-
-#site-header .nav-drop {
-    border: 1px solid var(--orange);
-    border-radius: 4px;
-}
-
-#site-header .nav-drop p {
-    display: inline-block;
-    margin: 0 0 0 4px;
-    color: var(--green);
-}
-
-#site-header .nav-drop ul {
-    /* Style: */
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    border-radius: 4px;
-    background-color: white;
-    position: absolute;
-    /* Dynamic: */
-    visibility: hidden;
-    opacity: 0;
-    z-index: 2;
-    transition: max-height 1s ease, opacity 0.1s ease-out;;
-    max-height: 0;
-    overflow: hidden;
-}
-#site-header .nav-drop:hover ul {
-    /* Style: */
-    padding: 1rem;
-    border: 1px solid var(--orange);
-    /* Dynamic: */
-    visibility: visible;
-    pointer-events: auto;
-    opacity: 0.98;
-    max-height: 500px;
-}
-#site-header .nav-drop .nav-li {
-    list-style: none;
-    font-size: 1.1rem;
-    padding-left: 0;
-}
-
-#site-header .nav-drop button {
-    background: none;
-    border: none;
-    font-size: 1.3rem;
     padding: 0;
-    width: 28px;
-    height: 25px;
 }
-#site-header .nav-drop button::before {
-    content: "";
-    display: inline-block;
-    width: 90%; /* Adjust width as needed */
-    height: 90%; /* Adjust height as needed */
-    background-image: url('data:image/svg+xml;utf8,<svg width="800px" height="800px" viewBox="0 0 72 72" id="emoji" xmlns="http://www.w3.org/2000/svg"><g id="line"><line x1="18" x2="62" y1="19" y2="19" fill="none" stroke="%23004d37" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="4"/><line x1="18" x2="62" y1="36" y2="36" fill="none" stroke="%23004d37" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="4"/><line x1="18" x2="62" y1="53" y2="53" fill="none" stroke="%23004d37" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="4"/></g></svg>');
-    background-size: contain;
-    background-repeat: no-repeat;
-    vertical-align: top;
+
+#rssite-main {
+  flex-grow: 1;
+  margin: 0;
+  padding: 0;
 }
 
 
-/* Site footer */
-#site-footer {
+
+// Header --------------------
+
+#rssite-header {
+    // Variables:
+    --blocks-margin: 2rem;
+
+    // Structure and robustness:
+    display: flex;
+    padding: 1rem 0 1rem 0;
+    margin: 0;
+
+    // Style:
+    align-items: center; // NOTE: Also consider stretch
+    border-bottom: 4px solid var(--orange);
+
+    // Fonts and robustness:
+    * {
+        font-size: 1.3rem;
+        line-height: 1;
+        font-family: "Montserrat", sans-serif;
+    }
+
+    // Header children:
+    & > nav {
+        flex: 0 0 var(--main-width);
+    }
+    &::before, &::after {
+        content: "";
+        flex: 1 1;
+        height: 1em;
+        margin: 0 var(--blocks-margin);
+        background-color: var(--orange);
+        @media (max-width: $media-width-lg) {
+            flex: 0 0 2rem;
+            margin: 0 auto;
+        }
+        @media (max-width: $media-width-md) {
+            flex: 0 0 0;
+            margin: 0 auto;
+        }
+    }
+
+    // General lists and items:
+    & > nav > ul {
+        padding: 0;
+        margin: 0;
+    }
+    li {
+        display: inline-block;
+    }
+    & > nav > ul {
+        & > .nav-li, & > .nav-drop {
+            margin-left: 2rem;
+        }
+        & > .nav-li:first-child, & > .nav-drop:first-child {
+            margin-left: 0;
+        }
+    }
+
+    // Nav dropdowns:
+    .nav-drop {
+        border: 1px solid var(--orange);
+        border-radius: 4px;
+
+        ul {
+            display: flex; // Structure
+            flex-direction: column;
+            z-index: 100;
+            gap: 0.8rem; // Style
+            border-radius: 4px;
+            background-color: white;
+            position: absolute;
+            padding: 0.8rem;
+            border: 1px solid var(--orange);
+            visibility: hidden; // Animation
+            opacity: 0;
+            height: 0;
+            transition: max-height 1s ease, opacity 0.1s ease-out;
+            overflow: hidden;
+        }
+        ul * {
+            font-size: 1.1rem;
+        }
+        li {
+            padding-left: 0.4rem;
+        }
+
+        & > button {
+            display: flex;
+            padding: 0.2rem 0.4rem;
+            color: var(--green);
+            background: none;
+            border: none;
+        }
+        & > button::after {
+            content: "";
+            height: 1em;
+            width: 1em;
+            margin-left: 0.1rem;
+            background-image: url('data:image/svg+xml;utf8,<svg width="800px" height="800px" viewBox="0 0 72 72" id="emoji" xmlns="http://www.w3.org/2000/svg"><g id="line"><line x1="18" x2="62" y1="19" y2="19" fill="none" stroke="%23004d37" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="4"/><line x1="18" x2="62" y1="36" y2="36" fill="none" stroke="%23004d37" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="4"/><line x1="18" x2="62" y1="53" y2="53" fill="none" stroke="%23004d37" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="4"/></g></svg>');
+            background-size: contain;
+            background-repeat: no-repeat;
+            vertical-align: top;
+        }
+    }
+
+
+    // Animations:
+    .nav-drop:hover ul, .nav-drop:focus-within ul {
+        visibility: visible;
+        opacity: 0.95;
+        height: auto;
+    }
+    .nav-li a[aria-current="page"], .nav-drop button[aria-current="page"]  {
+        font-weight: bold;
+    }
+}
+
+
+
+// Footer --------------------
+
+#rssite-footer {
+    // Main:
     margin: 0;
     background-color: var(--darkgreen);
     padding: 1rem 0 0.5rem 0;
     min-width: var(--min-width);
-}
-#site-footer p {
-    width: var(--main-width);
-    margin: auto;
-    text-align: right;
-    color: var(--darkgray);
-}
-#site-footer a {
-    color: var(--darkgray);
-    text-decoration: none;
-}
-#site-footer a:hover {
-    color: var(--gray);
+
+    p {
+        width: var(--main-width);
+        margin: auto;
+        text-align: right;
+        color: var(--darkgray);
+    }
+
+    // Links:
+    a {
+        color: var(--darkgray);
+        text-decoration: none;
+    }
+    a:hover {
+        color: var(--gray);
+    }
 }
